--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+
 /**
 * Template Name: Platia
 * Template URL: https://bootstrapmade.com/platia-bootstrap-restaurant-template/
@@ -7,7 +8,7 @@
 */
 
 @charset "UTF-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap');
 /*--------------------------------------------------------------
 # Font & Color Variables
 # Help: https://bootstrapmade.com/color-system/
@@ -27,7 +28,7 @@
   --background-color: #121e20;           
   
   /* Body Text - Muted Blue-Grey */
-  --default-color: #97bec3;              
+  --default-color: #fff;              
   
   /* Headings - CHANGED from White to Gold */
   --heading-color: #D4AF37;              
@@ -39,12 +40,13 @@
   --surface-color: #1c2e31;              
   
   /* High Contrast Text - CHANGED from White to Soft Beige */
-  --contrast-color: #E8D7B2;             
+  --contrast-color: #fff;             
 }
 
 /* Nav Menu Colors */
 :root {
-  --nav-color: #97bec3;                   /* Muted Text */
+  /* --nav-color: #97bec3;   */
+  --nav-color: #fff;                  /* Muted Text */
   --nav-hover-color: #D4AF37;             /* Gold Hover */
   --nav-mobile-background-color: #121e20; 
   --nav-dropdown-background-color: #1c2e31;
@@ -65,6 +67,18 @@
   --heading-color: #D4AF37;               /* Gold */
   --surface-color: #1c2e31;
   --contrast-color: #E8D7B2;              /* Soft Beige */
+}
+
+.special-font{
+   font-family: "Science Gothic", sans-serif !important;
+  font-optical-sizing: auto !important;
+  font-weight: 200;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0,
+    "wdth" 100,
+    "CTRS" 0;
+    text-shadow: 2px 2px rgba(231, 206, 206, 0.468);
 }
 
 
@@ -964,7 +978,7 @@ section,
 }
 
 .section-title h2 {
-  font-size: 32px;
+  font-size: 2.5em;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -1059,7 +1073,7 @@ section,
 }
 
 .hero .hero-text .hero-title {
-  font-size: 3.5rem;
+  font-size: 4.5rem;
   font-weight: 700;
   line-height: 1.2;
   margin-bottom: 25px;
@@ -1298,7 +1312,7 @@ section,
 # About Section
 --------------------------------------------------------------*/
 .about .about-content h2 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
   font-weight: 700;
   position: relative;
 }
@@ -2788,7 +2802,7 @@ section,
   background: linear-gradient(135deg, color-mix(in srgb, var(--accent-color), transparent 95%), color-mix(in srgb, var(--accent-color), transparent 90%));
   border-radius: 30px;
   padding: 4rem 3rem;
-  margin: 5rem 0;
+  /* margin: 5rem 0; */
 }
 
 .events .awards-section .awards-content h3 {
