almost the theme , creating mouse pointer starting soon

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,7 +238,7 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 36px;
+  /* max-height: 36px; */
   margin-right: 8px;
 }
 
@@ -4031,6 +4031,8 @@ section,
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
+/* Mine */
+
+.icon-nav{
+  width: 3.3em !important;
 }
