--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,15 +70,9 @@
 }
 
 .special-font{
-   font-family: "Science Gothic", sans-serif !important;
-  font-optical-sizing: auto !important;
-  font-weight: 200;
+  font-family: "Birthstone", cursive;
+  font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "slnt" 0,
-    "wdth" 100,
-    "CTRS" 0;
-    text-shadow: 2px 2px rgba(231, 206, 206, 0.468);
 }
 
 
